add: docker composing

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
 	<description>API for e-commerce website</description>
 	<properties>
 		<java.version>11</java.version>
+		<jib-maven-plugin.version>2.6.0</jib-maven-plugin.version>
+        <docker.distroless.image>gcr.io/distroless/java:11</docker.distroless.image>
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+        <springdoc-openapi-ui.version>1.4.8</springdoc-openapi-ui.version>
+        <docker.repo.url>renangoes</docker.repo.url>
+        <docker.repo.project>ecom-api</docker.repo.project>
+        <docker.image.name>${docker.repo.url}/${docker.repo.project}</docker.image.name>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -146,6 +153,25 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>${jib-maven-plugin.version}</version>
+				<configuration>
+					<from>
+						<image>${docker.distroless.image}</image>
+					</from>
+					<to>
+						<image>${docker.image.name}</image>
+					</to>
+					<tags>
+						<tag>${project.version}</tag>
+					</tags>
+					<container>
+						<mainClass>com.ecom.EcomApplication</mainClass>
+					</container>
 				</configuration>
 			</plugin>
 		</plugins>
