--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8081
 
 # Database settings
-spring.datasource.url=jdbc:mysql://localhost:3306/bootdb?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/bootdb?allowPublicKeyRetrieval=true&useSSL=false}
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.platform=mysql
@@ -15,3 +15,6 @@ spring.jpa.show-sql=true
 
 #logging
 logging.level.org.hibernate=ERROR
+
+# external api
+external.api.url=${EXTERNAL_API_URL:http://localhost:8080}
