add: unit tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,1 @@
-# Application port
-server.port=8081
-
-# Database settings
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/bootdb?createDatabaseIfNotExist=true}
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.platform=mysql
-spring.datasource.initialization-mode=always
-
-#jpa
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
-#logging
-logging.level.org.hibernate=ERROR
-
-# external api
-external.api.url=${EXTERNAL_API_URL:http://localhost:8080}
+spring.profiles.active=prod
