--- a/src/main/resources/application-integration.properties
+++ b/src/main/resources/application-integration.properties
@@ -10,8 +10,8 @@ spring.datasource.initialization-mode=always
 
 #jpa
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.flyway.enabled=false
+spring.jpa.hibernate.ddl-auto=none
+spring.flyway.baseline-on-migrate=true
 spring.jpa.show-sql=true
 
 #logging
